2 uzduotis: New task

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
       <div class="card">
         <div class="card-header">Užduočių sąrašas</div>
         <div class="card-body">
+          <app-new-task></app-new-task>
           <app-tasks-list></app-tasks-list>
         </div>
       </div>
