4 Uzduotis: EventEmitter, statistika

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
         <div class="card-header">Užduočių sąrašas</div>
         <div class="card-body">
           <app-new-task></app-new-task>
+          <app-task-type-stats></app-task-type-stats>
           <app-tasks-list></app-tasks-list>
         </div>
       </div>
