--- a/src/app/components/tasks-list/tasks-list.component.html
+++ b/src/app/components/tasks-list/tasks-list.component.html
@@ -1,10 +1,15 @@
-<div class="mt-3">
-  <ul class="list-group">
-    <li class="list-group-item" *ngFor="let task of tasks; let n = index">
-      <b>{{ n + 1 }}. {{ task.name }}.</b> Užduoties tipas: {{ task.type }}
-      <button class="btn btn-danger float-end" (click)="deleteTask(n)">
-        X
-      </button>
-    </li>
-  </ul>
+<div class="card">
+  <div class="card-header">Užduotys:</div>
+  <div class="card-body">
+    <div class="mt-3">
+      <ul class="list-group">
+        <li class="list-group-item" *ngFor="let task of tasks; let n = index">
+          <b>{{ n + 1 }}. {{ task.name }}.</b> Užduoties tipas: {{ task.type }}
+          <button class="btn btn-danger float-end" (click)="deleteTask(n)">
+            X
+          </button>
+        </li>
+      </ul>
+    </div>
+  </div>
 </div>
